--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,13 +25,13 @@ Description: The development of long-read sequencing technologies has
     data starting from the raw data, to exploratory analysis, DMR
     identification, and visualisation of the results.
 BiocType: Workflow
-biocViews: EpigeneticsWorkflow
+biocViews: Workflow, EpigeneticsWorkflow
 License: Apache License (>= 2)
 Encoding: UTF-8
-LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.0
 Depends: 
+    R (>= 4.4.0)
     dmrseq,
     dplyr,
     readr,
